<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">TypeDuck</string>
	<string name="space">Space</string>
	<string name="fullwidth_space">Fullwidth Space</string>
	<string name="confirm">Confirm</string>
	<string name="onboarding_skip">Skip</string>
	<string name="onboarding_open_keyboard_settings">Open Input Method Preferences</string>
	<string name="onboarding_open_keyboard_picker">Open Keyboard Picker</string>
	<string name="onboarding_done">Done!</string>
	<string-array name="onboarding_headings">
		<item>
"歡迎使用 TypeDuck
Welcome to TypeDuck"
		</item>
		<item>Activating TypeDuck</item>
		<item>One More Step to Go…</item>
		<item>You’re done!</item>
	</string-array>
	<string-array name="onboarding_contents">
		<item>
"歡迎使用 TypeDuck 打得 ⸺ 設有少數族裔語言提示粵拼輸入法！有字想打？一裝即用，毋須再等，即刻打得！
Welcome to TypeDuck: a Cantonese input keyboard with minority language prompts! Got something you want to type? Have your fingers ready, get, set, TYPE DUCK!"
		</item>
		<item>Enable TypeDuck in System Keyboard Settings</item>
		<item>Select TypeDuck from the list of input methods to get started.</item>
		<item>TypeDuck is now available for use. If you encounter any problems, you may visit the “About” page for support.</item>
	</string-array>
	<string name="refreshing">Refreshing…</string>
	<string name="pref_refresh">Refresh</string>
	<string name="pref_interface_language">介面語言 Interface Language</string>
	<string name="pref_interface_language_zho">中文</string>
	<string name="pref_interface_language_eng">English</string>
	<string name="pref_test_ime">Keyboard Test</string>
	<string name="pref_test_ime_placeholder">Try the input method here…</string>
	<string name="pref_ime_settings">Input Method Settings</string>
	<string name="pref_display_languages">Display Languages</string>
	<string name="pref_main_language">Main Language</string>
	<string-array name="pref_languages">
		<item name="eng">English</item>
		<item name="hin">Hindi</item>
		<item name="ind">Indonesian</item>
		<item name="nep">Nepali</item>
		<item name="urd">Urdu</item>
	</string-array>
	<string name="pref_show_romanization">Romanization above candidates</string>
	<string name="pref_show_reverse_lookup">Reverse lookup code above candidates</string>
	<string name="pref_candidate_font_size">Font size of candidates</string>
	<string name="pref_candidate_gap">Gap between candidates</string>
	<string-array name="pref_sizes">
		<item name="small">Small</item>
		<item name="normal">Normal</item>
		<item name="large">Large</item>
	</string-array>
	<string name="pref_general_settings">General Settings</string>
	<string name="pref_auto_cap">Auto-capitalization</string>
	<string name="pref_auto_cap_summary">Capitalize the first word of each sentence</string>
	<string name="pref_double_space_full_stop">Double-space full stop</string>
	<string name="pref_double_space_full_stop_summary">Double tap on spacebar inserts a full stop</string>
	<string name="pref_haptic_feedback">Vibrate on keypress</string>
	<string name="pref_audio_feedback">Sound on keypress</string>
	<string name="pref_visual_feedback">Popup on keypress</string>
	<string name="pref_symbols_on_qwerty">Numbers and symbols on letter keys</string>
	<string name="pref_symbols_on_qwerty_summary">Long press on letter keys insert numbers and symbols</string>
	<string name="pref_about">About</string>
	<string name="pref_about_description">
"歡迎使用 TypeDuck 打得 ⸺ 設有少數族裔語言提示粵拼輸入法！有字想打？一裝即用，毋須再等，即刻打得！
Welcome to TypeDuck: a Cantonese input keyboard with minority language prompts! Got something you want to type? Have your fingers ready, get, set, TYPE DUCK!

如有任何查詢，歡迎電郵至 info@typeduck.hk 或 lchaakming@eduhk.hk。
Should you have any enquiries, please email info@typeduck.hk or lchaakming@eduhk.hk.

本輸入法由香港教育大學語言學及現代語言系開發。特別鳴謝「語文教育及研究常務委員會」資助本計劃。
This input method is developed by the Department of Linguistics and Modern Language Studies, the Education University of Hong Kong. Special thanks to the Standing Committee on Language Education and Research for funding this project."
	</string>
	<string name="pref_links">Links</string>
	<string name="pref_typeduck_site">TypeDuck Website</string>
	<string name="pref_learnduck">LearnDuck 粵拼打字入門</string>
	<string name="pref_learnduck_summary">Introduction to Cantonese Jyutping Typing</string>
	<string name="pref_jyutping_site">粵拼 Jyutping</string>
	<string name="pref_typeduck_source">TypeDuck Source Code</string>
	<string name="pref_trime_source">Trime Source Code</string>
	<string name="pref_acknowledgements">Acknowledgements</string>
</resources>
