<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/app_name">
	<Preference
			android:key="pref_refresh"
			android:title="@string/pref_refresh"/>
	<Preference
			android:key="pref_test_ime"
			android:title="@string/pref_test_ime"
			app:summary="@string/pref_test_ime_placeholder" />
	<MultiSelectListPreference
			android:key="pref_display_languages"
			android:title="@string/pref_display_languages" />
	<ListPreference
			android:key="pref_main_language"
			android:title="@string/pref_main_language" />
	<PreferenceCategory android:title="@string/pref_ime_settings">
		<SwitchPreferenceCompat
				android:defaultValue="true"
				android:key="pref_auto_cap"
				android:title="@string/pref_auto_cap"
				app:summary="@string/pref_auto_cap_summary" />
		<SwitchPreferenceCompat
				android:defaultValue="true"
				android:key="pref_double_space_full_stop"
				android:title="@string/pref_double_space_full_stop"
				app:summary="@string/pref_double_space_full_stop_summary" />
		<SwitchPreferenceCompat
				android:defaultValue="false"
				android:key="pref_haptic_feedback"
				android:title="@string/pref_haptic_feedback" />
		<SwitchPreferenceCompat
				android:defaultValue="true"
				android:key="pref_audio_feedback"
				android:title="@string/pref_audio_feedback" />
		<SwitchPreferenceCompat
				android:defaultValue="true"
				android:key="pref_visual_feedback"
				android:title="@string/pref_visual_feedback" />
		<SwitchPreferenceCompat
				android:defaultValue="true"
				android:key="pref_symbols_on_qwerty"
				android:title="@string/pref_symbols_on_qwerty"
				app:summary="@string/pref_symbols_on_qwerty_summary" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_about">
		<Preference
				android:key="pref_typeduck_source"
				android:title="@string/pref_typeduck_source"/>
		<Preference
				android:key="pref_trime_source"
				android:title="@string/pref_trime_source"/>
		<Preference
				android:key="pref_license"
				android:title="@string/pref_license"/>
	</PreferenceCategory>
</PreferenceScreen>
